// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat eFhDDM"
  >
    <div
      class="sc-bxivhb jTbWOQ"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-ifAKCX hEchaI"
    >
      <div>
        <div
          class="sc-EHOje iMbGrn"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-bZQynM gxutOq"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-gzVnrw bgyHaj"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-htoDjs dXEZYR"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-dnqmqq uBEIo"
        >
          Read the full article
        </div>
        <svg
          class="iconForwardChevron"
          fillcolour="#bf0000"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat eFhDDM"
  >
    <div
      class="sc-ifAKCX lcAKjm"
    >
      <div>
        <div
          class="sc-EHOje CxSXN"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-bZQynM gmbtaS"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-htoDjs dXEZYR"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-dnqmqq uBEIo"
        >
          Read more
        </div>
        <svg
          class="iconForwardChevron"
          fillcolour="#bf0000"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH dTniwG"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
